<resources>
    <string name="app_name">Peruse</string>
    <string name="title_library">Library</string>
    <string name="title_authors">Authors</string>
    <string name="title_series">Series</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="series">Series</string>
    <string name="chapters">Chapters</string>
    <string name="series_entry">Series Entry</string>
    <string name="series_with_entry">%1$s #%2$s</string>
    <string name="book_chapters_pages">%1$d pages (%2$d up to %3$d)</string>
    <string name="book_written_by_author">by %1$s</string>
    <string name="book_series_with_entry">%1$s - %2$.1f</string>
    <string name="book_library_chapters_read">%1$d chapters,</string>
    <string name="book_library_average_time">avg. %1$s</string>
    <string name="book_library_page_average_time">avg. time per page: %1$s</string>
    <string name="book_time_read">%1$s spent reading.</string>
    <string name="dialog_book_new_header">Add New Book</string>
    <string name="dialog_book_series_checkbox">Is part of a series?</string>
    <string name="dialog_option_discard">Discard</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_add">Add</string>
    <string name="dialog_option_update">Update</string>
    <string name="dialog_option_start">Start</string>
    <string name="dialog_empty_fields_notice">Please fill in all fields in order to create a new %1$s.</string>
    <string name="dialog_empty_fields_notice_update">Please fill in all fields in order to update this %1$s.</string>
    <string name="reading_book_reading">Reading %1$s</string>
    <string name="reading_book_paused">Paused reading %1$s</string>
    <string name="dialog_reading_chapters_read">Chapters Read</string>
    <string name="dialog_reading_chapter_title">Chapter Title</string>
    <string name="dialog_reading_chapter_pages">Pages</string>
    <string name="dialog_reading_chapter_start">Start</string>
    <string name="dialog_reading_chapter_end">End</string>
    <string name="time_format">%1$sm %2$ss</string>
    <string name="long_time_format">%1$sh %2$sm %3$ss</string>
    <string name="time_format_colon">%1$s:%2$s</string>
    <string name="long_time_format_colon">%1$s:%2$s:%3$s</string>
    <string name="timer_hours_label">h</string>
    <string name="timer_minutes_label">m</string>
    <string name="timer_seconds_label">s</string>
    <string name="timer_placeholder">00</string>
    <string name="timer_status_idle">Idle</string>
    <string name="timer_status_running">Running</string>
    <string name="timer_status_paused">Paused</string>
    <string name="chapter_calc_fields_empty">One or more fields aren\'t filled in.</string>
    <string name="chapter_calc_end_too_small">End can\'t be smaller or the same as start.</string>
    <string name="chapter_calc_start_zero">Start can\'t be 0.</string>
    <string name="chapter_calc_result_full">This chapter would take around \n %1$d hours, %2$d minutes and %3$d seconds.</string>
    <string name="chapter_calc_result">This chapter would take around \n %1$d minutes and %2$d seconds.</string>
    <string name="dialog_chapter_calculate_time">Calculate Chapter time</string>
    <string name="dialog_chapter_calculate">Calculate</string>
    <string name="dialog_chapter_update_header">Edit Chapter</string>
    <!--  Settings / Preferences  -->
    <string name="settings">Settings</string>
    <string name="backup_data">Backup data</string>
    <string name="backup_data_key">backup_data</string>
    <string name="backup_data_summary">Backup data by creating a local copy.</string>
    <string name="restore_data">Restore data</string>
    <string name="restore_data_key">restore_data</string>
    <string name="restore_data_summary">Restore data by selecting a local backup.</string>
    <string name="backup_location">Backup location</string>
    <string name="backup_location_key">backup_location</string>
    <string name="backup_location_summary">The location in which to store the backups.</string>
</resources>
