<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.ruurd.peruse.ui.fragments.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_navigation_library_to_bookFragment"
            app:destination="@id/bookFragment"
            app:enterAnim="@android:anim/fade_in" />
    </fragment>

    <fragment
        android:id="@+id/navigation_writers"
        android:name="com.ruurd.peruse.ui.fragments.WritersFragment"
        android:label="@string/title_authors"
        tools:layout="@layout/fragment_authors" />

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.ruurd.peruse.ui.fragments.SeriesFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/bookFragment"
        android:name="com.ruurd.peruse.ui.fragments.BookFragment"
        android:label="BookFragment" >
        <argument
            android:name="book_id"
            app:argType="long" />
    </fragment>
</navigation>
