<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_chapter_update_header_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        app:layout_constraintBottom_toTopOf="@+id/dialog_chapter_update_basic_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialog_chapter_update_header"
            style="@style/TextAppearance.MdcTypographyStyles.Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_chapter_update_header"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_chapter_update_basic_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_update_header_container">

        <EditText
            android:id="@+id/dialog_chapter_update_title"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_chapter_update_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_update_title"
            tools:layout_editor_absoluteX="24dp">

            <TextView
                android:id="@+id/chapter_reading_pages_label"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/dialog_reading_chapter_pages"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dialog_chapter_update_start"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_marginStart="@dimen/spacing_views_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_reading_chapter_start"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dialog_chapter_update_end"
                app:layout_constraintStart_toEndOf="@+id/chapter_reading_pages_label" />

            <EditText
                android:id="@+id/dialog_chapter_update_end"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_marginStart="@dimen/spacing_views_large"
                android:layout_marginEnd="@dimen/spacing_views_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_reading_chapter_end"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dialog_chapter_update_start" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_chapter_update_series_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_update_basic_container">

        <EditText
            android:id="@+id/dialog_chapter_update_series"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_views"
            android:hint="@string/series"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dialog_chapter_update_series_entry"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_views"
            android:hint="@string/series_entry"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_update_series" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_reading_finished_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_views"
        android:layout_marginEnd="@dimen/spacing_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_update_series_container">

        <Button
            android:id="@+id/dialog_reading_discard_button"
            style="@style/ButtonAppearance.DialogStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:layout_marginTop="@dimen/spacing_views"
            android:layout_marginBottom="@dimen/spacing_views"
            android:text="@string/dialog_option_discard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_reading_update_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dialog_reading_update_button"
            style="@style/ButtonAppearance.DialogStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:layout_marginTop="@dimen/spacing_views"
            android:layout_marginBottom="@dimen/spacing_views"
            android:text="@string/dialog_option_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialog_reading_discard_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>