<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_chapter_header_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_chapter_calculate_time"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_header_container">

        <EditText
            android:id="@+id/dialog_chapter_pages_start"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_views"
            android:layout_weight="1"
            android:hint="@string/dialog_reading_chapter_start"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/dialog_chapter_pages_end"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_views"
            android:layout_weight="1"
            android:hint="@string/dialog_reading_chapter_end"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_chapter_calculate"
        style="@style/ButtonAppearance.DialogStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_chapter_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/dialog_chapter_status"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_views"
        android:paddingBottom="@dimen/spacing_views_extremely_large"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_chapter_calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>