<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/time_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:text="@string/timer_placeholder"
            android:textSize="@dimen/text_size_extremely_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time_seconds_label"
            app:layout_constraintStart_toEndOf="@+id/time_minutes_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_seconds_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:layout_marginEnd="@dimen/spacing_views"
            android:text="@string/timer_seconds_label"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/time_seconds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/time_seconds" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:text="@string/timer_placeholder"
            android:textSize="@dimen/text_size_extremely_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time_minutes_label"
            app:layout_constraintStart_toEndOf="@+id/time_hours_label"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_minutes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:text="@string/timer_minutes_label"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/time_minutes"
            app:layout_constraintEnd_toStartOf="@+id/time_seconds"
            app:layout_constraintStart_toEndOf="@+id/time_minutes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:text="@string/timer_placeholder"
            android:textSize="@dimen/text_size_extremely_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time_hours_label"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_views"
            android:text="@string/timer_hours_label"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/time_hours"
            app:layout_constraintEnd_toStartOf="@+id/time_minutes"
            app:layout_constraintStart_toEndOf="@+id/time_hours" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/timer_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_status_idle"
        style="@style/TextAppearance.MdcTypographyStyles.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_container" />


</merge>